@@ -1,3 +1,10 @@
+Sun, 23 Mar 2008 10:39:24 +0100 <thp@perli.net>
+Fix a bug when loading invalid image data (delete cover file then)
+
+	* src/gpodder/libgpodder.py: Fix a bug when gPodder is unable to load
+	an invalid cover image (i.e. when dragging a linked image from the
+	browser to the gPodder window, the link is sent, not the image)
+
 Sat, 22 Mar 2008 21:08:06 +0100 <thp@perli.net>
 Make bluetooth device discover a bit nicer
 
